create banner part

--- a/index.html
+++ b/index.html
@@ -66,6 +66,25 @@
     </nav>
     <!-- End of Navbar  -->
 
+    
+    <!-- Banner  -->
+    <section>
+      <div class="container-fluid">
+        <div class="row bg-warning align-items-center" style="height: 95vh;">
+          <div class="col-md-6 col-lg-8 text-center">
+            <h1 class="display-3 text-white" ><span class="display-2">داو</span>دوست دار پوست شما</h1>
+            <h2 class="display-4 my-5" >داو فرق میکنه</h2>
+            <a  class="btn btn-light btn-lg" href="">باشگاه مشتریان</a>
+            <a  class="btn btn-outline-light btn-lg" href="">وبلاگ</a>
+          </div>
+          <div class="col-md-6 col-lg-4">
+            <img src="/images/products.png " alt="" class="img-fluid d-none d-md-block">
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- End of Banner  -->
+  
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="scripts/jquery-3.3.1.slim.min.js"></script>
