--- a/index.html
+++ b/index.html
@@ -84,6 +84,34 @@
       </div>
     </section>
     <!-- End of Banner  -->
+
+     <!-- Features -->
+      <section class="bg-light py-5">
+        <div class="container">
+          <div class="text-center">
+            <h1 class="text-warning">مدیون اعتماد شماییم</h1>
+            <p class="text-muted my-5">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است</p>
+          </div>
+          <div class="row my-5 text-center">
+            <div class="col-lg-4 col-md-6 px-5 mb-5">
+              <i class="fas fa-award text-warning" style="font-size: 100px;"></i>
+              <h1 class="text-secondary">نشان برتر</h1>
+              <p class="text-muted mt-2">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است</p>
+            </div>
+            <div class="col-lg-4 col-md-6 px-5 mb-5">
+              <i class="fas fa-leaf text-success" style="font-size: 100px;"></i>
+              <h1 class="text-secondary"> کاملا طبیعی</h1>
+              <p class="text-muted mt-2">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است</p>
+            </div>
+            <div class="col-lg-4 col-md-12 px-5 mb-5">
+              <i class="fas fa-heartbeat text-danger" style="font-size: 100px;"></i>
+              <h1 class="text-secondary">دوستدار سلامتی</h1>
+              <p class="text-muted mt-2">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است</p>
+            </div>
+          </div>
+        </div>
+      </section>
+    <!-- End of Features -->
   
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
