--- a/index.html
+++ b/index.html
@@ -112,6 +112,140 @@
         </div>
       </section>
     <!-- End of Features -->
+
+    <!-- Products  -->
+    <section class="py-5">
+      <div class="container">
+        <div class="text-center">
+          <h1 class="text-warning">کیفیت سخن محصولات ماست</h1>
+          <p class="text-muted my-5">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است</p>
+        </div>
+        <div class="row my-5 text-center ">
+          <div class="col-lg-4 col-md-6 mt-lg-5 p-5">
+            <img src="/images/p1.jpg" alt="" class="img-thumbnail">
+            <h2 class="my-3 text-secondary">نرم کننده</h2>
+            <p class="text-muted ">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است</p>
+          </div>
+          <div class="col-lg-4 col-md-6 p-5">
+            <img src="images/p2.jpg" alt="" class="img-thumbnail">
+            <h2 class="my-3 text-secondary">پکیج داو</h2>
+            <p class="text-muted ">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است</p>
+          </div>
+          <div class="col-lg-4 col-md-12 mt-lg-5 p-5">
+            <img src="images/p3.jpg" alt="" class="img-thumbnail">
+            <h2 class="my-3 text-secondary">صابون ها</h2>
+            <p class="text-muted ">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- End of Products  -->
+
+       <!-- Blog  -->
+      <section class="bg-secondary p-5">
+        <div class="container-fluid">
+          <h1 class="text-warning text-center mb-5">تازه های وبلاگ</h1>
+          <div class="row">
+            <div class="col-lg-3 col-md-6 mb-5 px-3">
+              <div class="card">
+                <img src="images/b1.jpg" alt="" class="card-img-top">
+                <div class="card-body">
+                  <div class="card-title">
+                    <h3 class="text-secondary">تست تست تس</h3>
+                  </div>
+                  <div class="card-subtitle my-4">
+                    <p class="text-muted">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ</p>
+                  </div>
+                  <div class="text-right">
+                    <a href="">
+                      <i class="fab fa-facebook ml-3 text-primary" style="font-size: 30px;"></i>
+                    </a>
+                    <a href="">
+                      <i class="fab fa-twitter ml-3 text-info" style="font-size: 30px;"></i>
+                    </a>
+                    <a href="">
+                      <i class="fab fa-youtube ml-3 text-danger" style="font-size: 30px;"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-3 col-md-6 mb-5 px-3">
+              <div class="card">
+                <img src="images/b2.jpg" alt="" class="card-img-top">
+                <div class="card-body">
+                  <div class="card-title">
+                    <h3 class="text-secondary">تست تست تس</h3>
+                  </div>
+                  <div class="card-subtitle my-4">
+                    <p class="text-muted">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ</p>
+                  </div>
+                  <div class="text-right">
+                    <a href="">
+                      <i class="fab fa-facebook ml-3 text-primary" style="font-size: 30px;"></i>
+                    </a>
+                    <a href="">
+                      <i class="fab fa-twitter ml-3 text-info" style="font-size: 30px;"></i>
+                    </a>
+                    <a href="">
+                      <i class="fab fa-youtube ml-3 text-danger" style="font-size: 30px;"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-3 col-md-6 mb-5 px-3">
+              <div class="card">
+                <img src="images/b3.jpg" alt="" class="card-img-top">
+                <div class="card-body">
+                  <div class="card-title">
+                    <h3 class="text-secondary">تست تست تس</h3>
+                  </div>
+                  <div class="card-subtitle my-4">
+                    <p class="text-muted">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ</p>
+                  </div>
+                  <div class="text-right">
+                    <a href="">
+                      <i class="fab fa-facebook ml-3 text-primary" style="font-size: 30px;"></i>
+                    </a>
+                    <a href="">
+                      <i class="fab fa-twitter ml-3 text-info" style="font-size: 30px;"></i>
+                    </a>
+                    <a href="">
+                      <i class="fab fa-youtube ml-3 text-danger" style="font-size: 30px;"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-3 col-md-6 mb-5 px-3">
+              <div class="card">
+                <img src="images/b4.jpg" alt="" class="card-img-top">
+                <div class="card-body">
+                  <div class="card-title">
+                    <h3 class="text-secondary">تست تست تس</h3>
+                  </div>
+                  <div class="card-subtitle my-4">
+                    <p class="text-muted">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ</p>
+                  </div>
+                  <div class="text-right">
+                    <a href="">
+                      <i class="fab fa-facebook ml-3 text-primary" style="font-size: 30px;"></i>
+                    </a>
+                    <a href="">
+                      <i class="fab fa-twitter ml-3 text-info" style="font-size: 30px;"></i>
+                    </a>
+                    <a href="">
+                      <i class="fab fa-youtube ml-3 text-danger" style="font-size: 30px;"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    <!-- Ends of Blog  -->
   
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
