--- a/index.html
+++ b/index.html
@@ -246,6 +246,63 @@
         </div>
       </section>
     <!-- Ends of Blog  -->
+
+    <!-- Contact  -->
+    <section class="bg-light p-5">
+      <div class="container-fluid">
+        <div class="text-center">
+          <h1 class="text-warning">ارتباط با ما</h1>
+          <p class="text-muted my-5">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است</p>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-lg-6 ">
+            <h3 class="text-secondary my-5">آیا سوالی دارید ؟</h3>
+            <form action="" class="text-muted">
+              <div class="form-group">
+                <label for="name">نام</label>
+                <input class="form-control" id="name" type="text">
+              </div>
+              <div class="form-group">
+                <label for="email">ایمیل</label>
+                <input class="form-control" id="email" type="text">
+              </div>
+              <div class="form-group">
+                <label for="message">پیام</label>
+                <textarea class="form-control" name="" id="message" cols="30" rows="3"></textarea>
+              </div>
+              <button class="btn btn-outline-warning btn-block">ارسال</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- End of Contact  -->
+    <!-- Footer  -->
+    <footer class="bg-secondary py-5">
+      <div class="container text-center">
+        <h1 class="display-3">
+          <a href="" class="text-warning">
+            <i class="fas fa-dove"></i>
+          </a>
+        </h1>
+        <h2 class="text-white">
+          داو فرق میکنه
+        </h2>
+        <div class="my-5">
+          <a href="">
+            <i class="fab fa-instagram ml-3 text-danger" style="font-size: 30px;"></i>
+          </a>
+          <a href="">
+            <i class="fab fa-twitter ml-3 text-info" style="font-size: 30px;"></i>
+          </a>
+          <a href="">
+            <i class="fab fa-youtube ml-3 text-danger" style="font-size: 30px;"></i>
+          </a>
+        </div>
+        <p class="text-light">&copy;ایجاد شده توسط نئون</p>
+      </div>
+    </footer>
+    <!-- End of Footer  -->
   
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
